k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: item-kafka-backend
  namespace: item-kafka-poc-express
spec:
  replicas: 2
  selector:
    matchLabels:
      app: item-kafka-backend
  template:
    metadata:
      labels:
        app: item-kafka-backend
    spec:
      containers:
        - name: item-kafka-backend
          image: 123456789012.dkr.ecr.af-south-1.amazonaws.com/item-kafka-backend-express:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
